@@ -1,5 +1,4 @@
 java `
---enable-preview `
 -DApplicationClassName="com.firststory.firstslave.Main" `
 -cp "./deploy/win/*;./deploy/win/lib/*" `
 com.firststory.firstoracle.Runner
