@@ -1,5 +1,4 @@
 java `
---enable-preview `
 -Doptimised=false `
 -DRenderingFrameworkClassName="com.firststory.firstoracle.vulkan.VulkanFrameworkProvider" `
 -cp "./deploy/win/*;./deploy/win/lib/*" `
