@@ -1,6 +1,5 @@
 #!/usr/bin/env bash
 java \
---enable-preview \
 -Doptimised=true \
 -DRenderingFrameworkClassName="com.firststory.firstoracle.vulkan.VulkanFrameworkProvider" \
 -cp "./deploy/linux/*:./deploy/linux/lib/*" \
