@@ -1,5 +1,4 @@
 java `
---enable-preview `
 -Doptimised=true `
 -cp "./deploy/win/*;./deploy/win/lib/*" `
 com.firststory.firstoracle.templates.optimisation.App3D
