@@ -1,4 +1,3 @@
 java `
---enable-preview `
 -cp "./deploy/win/*;./deploy/win/lib/*" `
 com.firststory.firstoracle.templates.thesis.examples.TransparentOverlap
