@@ -1,5 +1,4 @@
 #!/usr/bin/env bash
 java \
---enable-preview \
 -cp "./deploy/linux/*:./deploy/linux/lib/*" \
 com.firststory.firstoracle.templates.thesis.examples.TransparentOverlap
